# hwo_pol

./: .gitignore  README.md  pyproject.toml
hwo_pol/: coatings.py  conf.py  eigenpolarization.py  models.py  paraxial_aberrations.py  plotting.py  writing.py  zernike.py
models/EAC1/: eac_model.msgpack  rayfront_550nm.msgpack
models/EAC4/: eac_model.msgpack  rayfront_550nm.msgpack
models/EAC5/: eac_model.msgpack  rayfront_550nm.msgpack
scripts/: check_jones_offdiagonals.py  compare_yields.py  eigenpol_plot.py  example_jones_pupil.py  gen_eac1_pupils.py  gen_eac4_pupils.py  gen_eac5_pupils.py  gen_jones_pupil.py  get_zernike_coeffs_jones.py  jones_from_msgpack.py  load_model.py  plot_coating_reflectivity.py  plot_paraxial_aberrations.py  single_eac_model.py  yield_toptical_calcs.py
tests/: test_coatings.py
